Refactor annotations and formatting
Use RestController, Slf4j, Getter
Use textblocks